Fixed projectscard width on mobile view

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -204,6 +204,7 @@
 }
 @media only screen and (max-width: 767px) {
   .cardsContainer{
+    width: 90%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
